--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 
     <!-- jQuery -->
-    <script src="javascript/jquery.min.js"></script>
+    <script src="/javascript/jquery.min.js"></script>
 
     <!-- Add jQuery helper classes to the html element -->
     <script>$('html').removeClass('no-js').addClass('js');</script>
